# random-squad-bot

./: Cargo.toml
src/: main.rs
