[package]
name = "squadbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.12", features = ["derive"] }
rand = "0.8.5"
serenity = { version = "0.12.0", features = [ "builder", "chrono", "client", "framework", "gateway", "http", "model", "standard_framework", "utils", "rustls_backend" ] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
